[build-system]
    requires = ['setuptools']
    build-backend = 'setuptools.build_meta'

[project]
    name = 'zosdiskuse'
    version = '0.0.1'
    description='A very simple disk usage calculator for illustrative purposes'
    authors = [ 
        { name = 'Chad McIntyre', email = 'chad.mcintyre@gmail.com'} 
    ]
    readme = 'README.md'
    dependencies = []
    classifiers = [
        'Programming Language :: Python :: 3',
        'License :: OSI Approved :: Apache Software License',
        'Operating System :: POSIX :: Other',
    ]

[project.urls]
    Homepage = 'https://github.com/mcinty/zosdiskuse'
    Issues = 'https://github.com/mcinty/zosdiskuse/issues'

