[build-system]
    requires = ['setuptools>=68.0']
    build-backend = 'setuptools.build_meta'

[project]
    name = 'zosdiskuse'
    version = '0.0.1'
    description='A very simple disk usage calculator for illustrative purposes'
    requires-python = '>=3.9'
    authors = [ 
        { name = 'Chad McIntyre', email = 'chad.mcintyre@gmail.com'} 
    ]
    readme = 'README.md'
    dependencies = []
    classifiers = [
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: 3.14',
        'License :: OSI Approved :: Apache Software License',
        'Operating System :: POSIX :: Other',
    ]

[project.optional-dependencies]
    dev = [
        'pytest>=8.0',
        'pytest-cov>=4.1',
        'mypy>=1.8',
        'ruff>=0.2',
    ]

[project.scripts]
    zosdiskuse = 'zosdiskuse.usage:main'

[project.urls]
    Homepage = 'https://github.com/mcinty/zosdiskuse'
    Issues = 'https://github.com/mcinty/zosdiskuse/issues'

[tool.mypy]
    python_version = "3.9"
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    strict_equality = true

[tool.pytest.ini_options]
    testpaths = ["tests"]
    python_files = ["test_*.py"]
    python_classes = ["Test*"]
    python_functions = ["test_*"]
    addopts = [
        "-v",
        "--strict-markers",
        "--cov=zosdiskuse",
        "--cov-report=term-missing",
        "--cov-report=html",
    ]
